Update over UpbSprint_25Sep2021

--- a/public_html/index.html
+++ b/public_html/index.html
@@ -2,17 +2,16 @@
 
 <html>
     <head>
-        <title>TODO supply a title</title>
+        <title>Salud MinTIC</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="estilos.css">
+        <link rel="stylesheet" href="ccs/estilos.css">
     </head>
     <body>
 <div class="container">
-
     <div class="titulo">
             <h1>Bienvenidos a Salud MinTIC</h1>
-    </div>
+   </div>
 
 
     <div class="texto1">
@@ -20,9 +19,6 @@
     </div>
     <div class="texto2">
        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Donec a diam lectus. Set sit amet ipsum mauris. Maecenas congue ligula as quam viverra nec consectetur ant hendrerit. Donec et mollis dolor. Praesent et diam eget libero egestas mattis sit amet vitae augue. Nam tincidunt congue enim, ut porta lorem lacinia consectetur.</p>
-    </div>
-    <div class="texto3">
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Donec a diam lectus. Set sit amet ipsum mauris. Maecenas congue ligula as quam viverra nec consectetur ant hendrerit. Donec et mollis dolor. Praesent et diam eget libero egestas mattis sit amet vitae augue. Nam tincidunt congue enim, ut porta lorem lacinia consectetur.
     </div>
     <div class="registro">
         <nav id="vertical_navbar">
@@ -43,6 +39,9 @@
 
     </div>
 </div>
-
     </body>
+    <footer> <!-- Start elaborado por: jairvides -->
+        <h6>(C) 2021</h6>
+        <a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/"><img alt="Licencia Creative Commons" style="border-width:0" src="https://i.creativecommons.org/l/by-sa/4.0/88x31.png" /></a><br />Esta obra está bajo una <a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/">Licencia Creative Commons Atribución-CompartirIgual 4.0 Internacional</a>.
+    </footer> <!-- End elaborado por: jairvides -->
 </html>
