Refactor create links html to cards. Add set TODO for menu

--- a/public_html/contactanos.html
+++ b/public_html/contactanos.html
@@ -13,6 +13,6 @@ and open the template in the editor.
     </head>
     <!--Set html structure to the form jheb-->
     <body id="body_contactanos">
-
+      TODO contáctanos
     </body>
 </html>
