--- a/public_html/index.html
+++ b/public_html/index.html
@@ -54,7 +54,7 @@
       <div class="back">
         <h3>Servicios de Consultoria</h3>
         <p>En desarrollo de software, redes, equipos</p>
-        <a href="#">Informese aquí</a>
+        <a href="consultoria.html"">Informese aquí</a>
       </div>
     </div>
   </div>
@@ -68,7 +68,7 @@
       <div class="back">
         <h3>Ofrecemos desarrollar su software a la medida</h3>
         <p>Tal y como sean las disposiciones y requerimientos que se indiquen</p>
-        <a href="#">Informese aquí</a>
+        <a href="desarrolloMedida.html">Informese aquí</a>
       </div>
     </div>
   </div>
@@ -82,7 +82,7 @@
       <div class="back">
         <h3>Realice con nosotros su infraestructura</h3>
         <p>Fácil, confiable, rápido, ágil, flexible.</p>
-        <a href="#">Informese aquí</a>
+        <a href="infraestructura.html">Informese aquí</a>
       </div>
     </div>
   </div>
@@ -96,7 +96,7 @@
       <div class="back">
         <h3>Servicio de desarrollo de páginas y apps web</h3>
         <p>Dejenos conocer sus necesidades, y nosotros le pondremos la realidad a sus sueños</p>
-        <a href="#">Informese Aquí</a>
+        <a href="paginaWeb.html">Informese Aquí</a>
       </div>
     </div>
   </div>
