--- a/public_html/paginaWeb.html
+++ b/public_html/paginaWeb.html
@@ -6,13 +6,13 @@ and open the template in the editor.
 -->
 <html>
     <head>
-        <title>Productos</title>
+        <title>Desarrollo página web</title>
         <meta charset="UTF-8">
         <link rel="stylesheet" href="ccs/estilos.css">
 
     </head>
     <!--Set html structure to the form jheb-->
-    <body id="body_productos">
-        TODO Productos
+    <body id="body_desarrolloPáginaWeb">
+
     </body>
 </html>
