--- a/public_html/consultoria.html
+++ b/public_html/consultoria.html
@@ -6,13 +6,12 @@ and open the template in the editor.
 -->
 <html>
     <head>
-        <title>Productos</title>
+        <title>Consultoria</title>
         <meta charset="UTF-8">
         <link rel="stylesheet" href="ccs/estilos.css">
 
     </head>
     <!--Set html structure to the form jheb-->
-    <body id="body_productos">
-        TODO Productos
-    </body>
+    <body id="body_consultoria">
+
 </html>
