--- a/public_html/proyectos.html
+++ b/public_html/proyectos.html
@@ -13,6 +13,6 @@ and open the template in the editor.
     </head>
     <!--Set html structure to the form jheb-->
     <body id="body-projectos">
-
+      TODO Proyectos
     </body>
 </html>
