--- a/public_html/quienesSomos.html
+++ b/public_html/quienesSomos.html
@@ -13,6 +13,6 @@ and open the template in the editor.
     </head>
     <!--Set html structure to the form jheb-->
     <body id="body-quienesSomos">
-
+      TODO quienes somos
     </body>
 </html>
