ADD html for consultoría

--- a/public_html/consultoria.html
+++ b/public_html/consultoria.html
@@ -14,4 +14,5 @@ and open the template in the editor.
     <!--Set html structure to the form jheb-->
     <body id="body_consultoria">
 
+    </body>
 </html>
