refactoring the "registry.html" file and its styling features

--- a/public_html/registro.html
+++ b/public_html/registro.html
@@ -13,6 +13,9 @@ and open the template in the editor.
     </head>
     <!--Set html structure to the form jheb-->
     <body id="body_form_registration">
+        <div class="titulo">
+          <h1>Bienvenidos a Salud MinTIC</h1>
+        </div>
         <form id="form_registrarse">
             <h1>Formulario de registro</h1>
             <input id="in_nombre_usuario" type="text" maxlength="20" placeholder="Nombre de usuario"/>
