--- a/public_html/quienesSomos.html
+++ b/public_html/quienesSomos.html
@@ -6,13 +6,32 @@ and open the template in the editor.
 -->
 <html>
     <head>
-        <title>Quienes somos</title>
+        <title>¿Quiénes Somos?</title>
         <meta charset="UTF-8">
         <link rel="stylesheet" href="ccs/estilos.css">
 
     </head>
     <!--Set html structure to the form jheb-->
     <body id="body-quienesSomos">
-      TODO quienes somos
+    <h1>¿Quiénes Somos?</h1>
+		Agile nace de la idea de poder dedicarnos a lo que nos gusta, disfrutar de los proyectos desde el principio y poder sentirnos parte de ellos.
+		Cada proyecto web en el participamos nos marca y nos enseña siempre algo nuevo. 
+		De esta forma estamos en continuo aprendizaje, nos gusta estar a la vanguardia. Y eso se ve reflejado en nuestros trabajos.
+
+
+	<h1>¿Por qué Agile?</h1>
+
+		Cuando contactan con nosotros para encargarnos del desarrollo de un proyecto web, casi siempre se trata de empresas nuevas, 
+		de emprendedores, que nos cuentan su idea con las ganas y el anhelo de algo nuevo. 
+		Y nosotros queremos compartir ese anhelo de nuestros clientes.
+		Sabemos que es importante que nos confien su proyecto, y para nosotros es un honor formar parte de ese anhelo, 
+		porque queremos hacer de tu proyecto un gran proyecto.
+
+		El anhelo también es propio, porque nosotros también somos emprendedores. 
+		Es un sueño dedicarnos a lo que nos gusta, y poder elegir los proyectos en los que participamos es un privilegio. 
+		Por eso no disponemos de planes de precios para nuestros desarrollos, ni paquetes básicos, premium o profesionales. 
+		Tratamos cada proyecto de forma independiente, y nos adaptamos a tu presupuesto, sin letras pequeñas ni costes añadidos.
+
+		Tú pones la idea y nosotros la hacemos realidad.
     </body>
 </html>
