--- a/public_html/contactanos.html
+++ b/public_html/contactanos.html
@@ -26,10 +26,10 @@
 <!--===============================================================================================-->
 </head>
 <body>
-
-
+	<header style = "text-align: center; background-color: #f2f2f2;">
+		<img src="img/logo.png" alt="Icono empresa"  style= "max-width:10%; max-height:10%;" >
+	</header>
 	<div class="container-contact100">
-
 		<div class="wrap-contact100">
 			<form class="contact100-form validate-form">
 				<span class="contact100-form-title">
@@ -98,6 +98,10 @@
 
   gtag('config', 'UA-23581568-13');
 </script>
+
+<footer>
+	
+</footer>
 
 </body>
 </html>
