--- a/public_html/quienesSomos.html
+++ b/public_html/quienesSomos.html
@@ -14,14 +14,15 @@ and open the template in the editor.
     <!--Set html structure to the form jheb-->
     <body id="body-quienesSomos">
     <h1>¿Quiénes Somos?</h1>
-		Agile nace de la idea de poder dedicarnos a lo que nos gusta, disfrutar de los proyectos desde el principio y poder sentirnos parte de ellos.
+	    <br>
+		<p>Agile nace de la idea de poder dedicarnos a lo que nos gusta, disfrutar de los proyectos desde el principio y poder sentirnos parte de ellos.
 		Cada proyecto web en el participamos nos marca y nos enseña siempre algo nuevo. 
-		De esta forma estamos en continuo aprendizaje, nos gusta estar a la vanguardia. Y eso se ve reflejado en nuestros trabajos.
+		De esta forma estamos en continuo aprendizaje, nos gusta estar a la vanguardia. Y eso se ve reflejado en nuestros trabajos.</p>
 
 
 	<h1>¿Por qué Agile?</h1>
-
-		Cuando contactan con nosotros para encargarnos del desarrollo de un proyecto web, casi siempre se trata de empresas nuevas, 
+	    <br>
+		<p>Cuando contactan con nosotros para encargarnos del desarrollo de un proyecto web, casi siempre se trata de empresas nuevas, 
 		de emprendedores, que nos cuentan su idea con las ganas y el anhelo de algo nuevo. 
 		Y nosotros queremos compartir ese anhelo de nuestros clientes.
 		Sabemos que es importante que nos confien su proyecto, y para nosotros es un honor formar parte de ese anhelo, 
@@ -32,6 +33,6 @@ and open the template in the editor.
 		Por eso no disponemos de planes de precios para nuestros desarrollos, ni paquetes básicos, premium o profesionales. 
 		Tratamos cada proyecto de forma independiente, y nos adaptamos a tu presupuesto, sin letras pequeñas ni costes añadidos.
 
-		Tú pones la idea y nosotros la hacemos realidad.
+		Tú pones la idea y nosotros la hacemos realidad.</p>
     </body>
 </html>
