Add advance html servicios

--- a/public_html/infraestructura.html
+++ b/public_html/infraestructura.html
@@ -8,11 +8,108 @@ and open the template in the editor.
     <head>
         <title>Infraestructura</title>
         <meta charset="UTF-8">
-        <link rel="stylesheet" href="ccs/estilos.css">
+        <link rel="stylesheet" href="ccs/servicio.css">
 
     </head>
     <!--Set html structure to the form jheb-->
-    <body id="body_infraestructura">
+    <body>
+      <div class="contenedor_padre">
 
+        <div class="menu">
+            <p id="menu1">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+          </div>
+
+          <div class="titulo-servicio">
+              <p id="menu1">Consultoría</p>
+            </div>
+
+        <div class="slogan-1">
+
+          <div class="slogan-1-colum-1">
+            <div class="slogan-1-colum-1-sales-argument">
+              <p id="menu1">Power Solution for Your Startup Bussiness.</p>
+            </div>
+            <div class="slogan-1-colum-1-description-sales">
+              <p id="menu1">Lorem ipsum viverra feugiat. Tesque libero ut justo, ultrices in ligula. Semper at tempufddfel. Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+            </div>
+            <div class="slogan-1-colum-1-stadistical-data">
+              <p id="menu1">Power Solution for Your Startup Bussiness.</p>
+            </div>
+
+          </div>
+
+          <div class="slogan-1-colum-2">
+            <img id="img-slogan-1-colum2"src="img/icono_consultoria.png" alt="">
+          </div>
+
+        </div>
+
+        <div class="slogan-2">
+
+          <div class="slogan-2-colum-1">
+            <img src="img/icono_consultoria.png" alt="">
+          </div>
+
+          <div class="slogan-2-colum-2">
+            <div class="slogan-2-colum-2-sales-argument">
+              <p id="menu1">Power Solution for Your Startup Bussiness.</p>
+            </div>
+            <div class="slogan-2-colum-2-description-sales">
+              <p id="menu1">Lorem ipsum viverra feugiat. Tesque libero ut justo, ultrices in ligula. Semper at tempufddfel. Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+            </div>
+            <div class="slogan-2-colum-2-stadistical-data">
+              <p id="menu1">Power Solution for Your Startup Bussiness.</p>
+            </div>
+          </div>
+
+
+
+        </div>
+
+
+        <div class="caracteriticas">
+          <div id="caracteristicas-title">
+            <h1>Que podemos proveer</h1>
+          </div>
+
+          <div class="carcateriticas-group-cards">
+            <div class="caracteriticas-cards">
+              <img class="logo-caracteriticas" src="img/logo-fallas.jpg" alt="">
+              <h3>Idemtificación y reparación de fallas</h3>
+              <p id="parrafo1">Lorem ante ipsum primis in faucibus orci luctus eted ultrices posuere curae fers luctus eted. Lorem ante ipsum primis in faucibus orci luctus eted ultrices posuere curae fers luctus eted.</p>
+            </div>
+            <div class="caracteriticas-cards">
+              <img class="logo-caracteriticas" src="img/logo-planeacion-estrategica.jpg" alt="">
+              <h3>Planeación estratégica</h3>
+              <p id="parrafo1">Lorem ante ipsum primis in faucibus orci luctus eted ultrices posuere curae fers luctus eted. Lorem ante ipsum primis in faucibus orci luctus eted ultrices posuere curae fers luctus eted.</p>
+            </div>
+            <div class="caracteriticas-cards">
+              <img class="logo-caracteriticas" src="img/logo-mineria.jpg" alt="">
+              <h3>Mineria de data</h3>
+              <p id="parrafo1">Lorem ante ipsum primis in faucibus orci luctus eted ultrices posuere curae fers luctus eted. Lorem ante ipsum primis in faucibus orci luctus eted ultrices posuere curae fers luctus eted.</p>
+            </div>
+          </div>
+        </div>
+
+        <div class="como-lo-hacemos">
+          <div class="como-lo-hacemos-cards">
+            <img class="icon-como-lo-hacemos" src="img/logo-Planning.jpg" alt="">
+            <h2>Planeación</h2>
+            <p id="parrafo1">Lorem ante ipsum primis in faucibus orci luctus eted ultrices posuere curae fers luctus eted.</p>
+          </div>
+          <div class="como-lo-hacemos-cards">
+            <img class="icon-como-lo-hacemos" src="img/logo-Optimizing.jpg"  alt="">
+            <h2>Optimización</h2>
+            <p id="parrafo1">Lorem ante ipsum primis in faucibus orci luctus eted ultrices posuere curae fers luctus eted.</p>
+          </div>
+
+          <div class="como-lo-hacemos-cards">
+            <img class="icon-como-lo-hacemos" src="img/logo-Result.jpg" alt="">
+            <h2>Resultados</h2>
+            <p id="parrafo1">Lorem ante ipsum primis in faucibus orci luctus eted ultrices posuere curae fers luctus eted.</p>
+          </div>
+
+        </div>
+      </div>
     </body>
 </html>
