Refactor infraestrutura html

--- a/public_html/infraestructura.html
+++ b/public_html/infraestructura.html
@@ -75,7 +75,7 @@ and open the template in the editor.
           <div class="carcateriticas-group-cards">
             <div class="caracteriticas-cards">
               <img class="logo-caracteriticas" src="img/logo-fallas.jpg" alt="">
-              <h3>Idemtificación y reparación de fallas</h3>
+              <h3>Identificación y reparación de fallas</h3>
               <p id="parrafo1">Lorem ante ipsum primis in faucibus orci luctus eted ultrices posuere curae fers luctus eted. Lorem ante ipsum primis in faucibus orci luctus eted ultrices posuere curae fers luctus eted.</p>
             </div>
             <div class="caracteriticas-cards">
@@ -92,23 +92,26 @@ and open the template in the editor.
         </div>
 
         <div class="como-lo-hacemos">
-          <div class="como-lo-hacemos-cards">
-            <img class="icon-como-lo-hacemos" src="img/logo-Planning.jpg" alt="">
-            <h2>Planeación</h2>
-            <p id="parrafo1">Lorem ante ipsum primis in faucibus orci luctus eted ultrices posuere curae fers luctus eted.</p>
+          <div id="como-lo-hacemos-title">
+            <h1>Como lo hacemos</h1>
           </div>
-          <div class="como-lo-hacemos-cards">
-            <img class="icon-como-lo-hacemos" src="img/logo-Optimizing.jpg"  alt="">
-            <h2>Optimización</h2>
-            <p id="parrafo1">Lorem ante ipsum primis in faucibus orci luctus eted ultrices posuere curae fers luctus eted.</p>
+          <div class="como-lo-hacemos-group-cards">
+            <div class="como-lo-hacemos-cards">
+              <img class="icon-como-lo-hacemos" src="img/logo-Planning.jpg" alt="">
+              <h2>Planeación</h2>
+              <p id="parrafo1">Lorem ante ipsum primis in faucibus orci luctus eted ultrices posuere curae fers luctus eted.</p>
+            </div>
+            <div class="como-lo-hacemos-cards">
+              <img class="icon-como-lo-hacemos" src="img/logo-Optimizing.jpg"  alt="">
+              <h2>Optimización</h2>
+              <p id="parrafo1">Lorem ante ipsum primis in faucibus orci luctus eted ultrices posuere curae fers luctus eted.</p>
+            </div>
+            <div class="como-lo-hacemos-cards">
+              <img class="icon-como-lo-hacemos" src="img/logo-Result.jpg" alt="">
+              <h2>Resultados</h2>
+              <p id="parrafo1">Lorem ante ipsum primis in faucibus orci luctus eted ultrices posuere curae fers luctus eted.</p>
+            </div>
           </div>
-
-          <div class="como-lo-hacemos-cards">
-            <img class="icon-como-lo-hacemos" src="img/logo-Result.jpg" alt="">
-            <h2>Resultados</h2>
-            <p id="parrafo1">Lorem ante ipsum primis in faucibus orci luctus eted ultrices posuere curae fers luctus eted.</p>
-          </div>
-
         </div>
       </div>
     </body>
