--- a/public_html/proyectos.html
+++ b/public_html/proyectos.html
@@ -76,7 +76,7 @@ and open the template in the editor.
                 </div>
 					
 				<div class="wpb_wrapper">
-                    <h2 class="accent-color">Algunos de nuestros desarrollos de software a medida</h2>
+                    <h2 class="accent-color">* Algunos de nuestros desarrollos de software a medida</h2>
                     <br>
                     <ul class="">
                         <li class="col-md-12 col-lg-12 separador50">
