--- a/public_html/infraestructura.html
+++ b/public_html/infraestructura.html
@@ -15,31 +15,23 @@ and open the template in the editor.
     <body>
       <div class="contenedor_padre">
 
-        <div class="menu">
-            <p id="menu1">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-          </div>
-
           <div class="titulo-servicio">
-              <p id="menu1">Consultoría</p>
+              <p id="menu">Consultoría</p>
             </div>
 
         <div class="slogan-1">
 
           <div class="slogan-1-colum-1">
             <div class="slogan-1-colum-1-sales-argument">
-              <p id="menu1">Power Solution for Your Startup Bussiness.</p>
+              <h2>Soluciones robustas para tu negocio</h2>
             </div>
             <div class="slogan-1-colum-1-description-sales">
               <p id="menu1">Lorem ipsum viverra feugiat. Tesque libero ut justo, ultrices in ligula. Semper at tempufddfel. Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
             </div>
-            <div class="slogan-1-colum-1-stadistical-data">
-              <p id="menu1">Power Solution for Your Startup Bussiness.</p>
-            </div>
-
           </div>
 
           <div class="slogan-1-colum-2">
-            <img id="img-slogan-1-colum2"src="img/icono_consultoria.png" alt="">
+            <img src="img/logo-slogan-1.jpg" alt="">
           </div>
 
         </div>
@@ -47,23 +39,20 @@ and open the template in the editor.
         <div class="slogan-2">
 
           <div class="slogan-2-colum-1">
-            <img src="img/icono_consultoria.png" alt="">
+            <img src="img/logo-slogan-2.jpg" alt="">
           </div>
 
           <div class="slogan-2-colum-2">
             <div class="slogan-2-colum-2-sales-argument">
-              <p id="menu1">Power Solution for Your Startup Bussiness.</p>
+              <h2>Proveemos servicios confiables</h2>
             </div>
             <div class="slogan-2-colum-2-description-sales">
-              <p id="menu1">Lorem ipsum viverra feugiat. Tesque libero ut justo, ultrices in ligula. Semper at tempufddfel. Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+              <p id="menu1">Lorem ipsum viverra feugiat. Tesque libero ut justo, ultrices in ligula. Semper at tempufddfel. Lorem ipsum dolor sit amet consectetur adipisicing elit.Lorem ipsum viverra feugiat. Tesque libero ut justo, ultrices in ligula. Semper at tempufddfel. Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
             </div>
             <div class="slogan-2-colum-2-stadistical-data">
-              <p id="menu1">Power Solution for Your Startup Bussiness.</p>
+              <a class="btn button-style" href="index.html">Learn More </a>
             </div>
           </div>
-
-
-
         </div>
 
 
@@ -77,16 +66,19 @@ and open the template in the editor.
               <img class="logo-caracteriticas" src="img/logo-fallas.jpg" alt="">
               <h3>Identificación y reparación de fallas</h3>
               <p id="parrafo1">Lorem ante ipsum primis in faucibus orci luctus eted ultrices posuere curae fers luctus eted. Lorem ante ipsum primis in faucibus orci luctus eted ultrices posuere curae fers luctus eted.</p>
+              <a class="btn size-char" href="index.html">Leer mas</a>
             </div>
             <div class="caracteriticas-cards">
               <img class="logo-caracteriticas" src="img/logo-planeacion-estrategica.jpg" alt="">
               <h3>Planeación estratégica</h3>
               <p id="parrafo1">Lorem ante ipsum primis in faucibus orci luctus eted ultrices posuere curae fers luctus eted. Lorem ante ipsum primis in faucibus orci luctus eted ultrices posuere curae fers luctus eted.</p>
+              <a class="btn size-char" href="index.html">Leer mas</a>
             </div>
             <div class="caracteriticas-cards">
               <img class="logo-caracteriticas" src="img/logo-mineria.jpg" alt="">
               <h3>Mineria de data</h3>
               <p id="parrafo1">Lorem ante ipsum primis in faucibus orci luctus eted ultrices posuere curae fers luctus eted. Lorem ante ipsum primis in faucibus orci luctus eted ultrices posuere curae fers luctus eted.</p>
+              <a class="btn size-char" href="index.html">Leer mas</a>
             </div>
           </div>
         </div>
