Add html file services

--- a/public_html/consultoria.html
+++ b/public_html/consultoria.html
@@ -1,37 +1,110 @@
 <!DOCTYPE html>
-
+<!--
+To change this license header, choose License Headers in Project Properties.
+To change this template file, choose Tools | Templates
+and open the template in the editor.
+-->
 <html>
     <head>
-        <title>Salud MinTIC</title>
+        <title>Consultoría</title>
         <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="ccs/servicio.css">
+
     </head>
-    <body> <!--.boxesContainer-->
+    <!--Set html structure to the form jheb-->
+    <body>
+      <div class="contenedor_padre">
 
-        <div class="main1">
-            <div class="main">
-              <img src="img/icono_consultoria.png" alt="">
-              <h4>Esto es un bloque</h4>
-              <p id="parrafo1">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-            </div>
-            <div class="main">
-              <img src="img/icono_pagina_web.png" alt="">
-              <h4>Esto es un bloque</h4>
-              <p id="parrafo1">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+          <div class="titulo-servicio">
+              <p id="menu">Consultoría</p>
             </div>
 
-            <div class="main">
-              <img src="img/icono_desarrollo_medida.png" alt="">
-              <h4>Esto es un bloque</h4>
-              <p id="parrafo1">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-            </div>
+        <div class="slogan-1">
 
-            <div class="main">
-              <img src="img/icono_infraestrctura.png" alt="">
-              <h4>Esto es un bloque</h4>
-              <p id="parrafo1">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+          <div class="slogan-1-colum-1">
+            <div class="slogan-1-colum-1-sales-argument">
+              <h2>Soluciones robustas para tu negocio</h2>
             </div>
+            <div class="slogan-1-colum-1-description-sales">
+              <p id="menu1">Lorem ipsum viverra feugiat. Tesque libero ut justo, ultrices in ligula. Semper at tempufddfel. Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+            </div>
+          </div>
+
+          <div class="slogan-1-colum-2">
+            <img src="img/logo-slogan-1.jpg" alt="">
+          </div>
+
         </div>
-  </body>
+
+        <div class="slogan-2">
+
+          <div class="slogan-2-colum-1">
+            <img src="img/logo-slogan-2.jpg" alt="">
+          </div>
+
+          <div class="slogan-2-colum-2">
+            <div class="slogan-2-colum-2-sales-argument">
+              <h2>Proveemos servicios confiables</h2>
+            </div>
+            <div class="slogan-2-colum-2-description-sales">
+              <p id="menu1">Lorem ipsum viverra feugiat. Tesque libero ut justo, ultrices in ligula. Semper at tempufddfel. Lorem ipsum dolor sit amet consectetur adipisicing elit.Lorem ipsum viverra feugiat. Tesque libero ut justo, ultrices in ligula. Semper at tempufddfel. Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+            </div>
+            <div class="slogan-2-colum-2-stadistical-data">
+              <a class="btn button-style" href="index.html">Leer mas</a>
+            </div>
+          </div>
+        </div>
+
+
+        <div class="caracteriticas">
+          <div id="caracteristicas-title">
+            <h1>Que podemos proveer</h1>
+          </div>
+
+          <div class="carcateriticas-group-cards">
+            <div class="caracteriticas-cards">
+              <img class="logo-caracteriticas" src="img/logo-fallas.jpg" alt="">
+              <h3>Identificación y reparación de fallas</h3>
+              <p id="parrafo1">Lorem ante ipsum primis in faucibus orci luctus eted ultrices posuere curae fers luctus eted. Lorem ante ipsum primis in faucibus orci luctus eted ultrices posuere curae fers luctus eted.</p>
+              <a class="btn size-char" href="index.html">Leer mas</a>
+            </div>
+            <div class="caracteriticas-cards">
+              <img class="logo-caracteriticas" src="img/logo-planeacion-estrategica.jpg" alt="">
+              <h3>Planeación estratégica</h3>
+              <p id="parrafo1">Lorem ante ipsum primis in faucibus orci luctus eted ultrices posuere curae fers luctus eted. Lorem ante ipsum primis in faucibus orci luctus eted ultrices posuere curae fers luctus eted.</p>
+              <a class="btn size-char" href="index.html">Leer mas</a>
+            </div>
+            <div class="caracteriticas-cards">
+              <img class="logo-caracteriticas" src="img/logo-mineria.jpg" alt="">
+              <h3>Mineria de data</h3>
+              <p id="parrafo1">Lorem ante ipsum primis in faucibus orci luctus eted ultrices posuere curae fers luctus eted. Lorem ante ipsum primis in faucibus orci luctus eted ultrices posuere curae fers luctus eted.</p>
+              <a class="btn size-char" href="index.html">Leer mas</a>
+            </div>
+          </div>
+        </div>
+
+        <div class="como-lo-hacemos">
+          <div id="como-lo-hacemos-title">
+            <h1>Como lo hacemos</h1>
+          </div>
+          <div class="como-lo-hacemos-group-cards">
+            <div class="como-lo-hacemos-cards">
+              <img class="icon-como-lo-hacemos" src="img/logo-Planning.jpg" alt="">
+              <h2>Planeación</h2>
+              <p id="parrafo1">Lorem ante ipsum primis in faucibus orci luctus eted ultrices posuere curae fers luctus eted.</p>
+            </div>
+            <div class="como-lo-hacemos-cards">
+              <img class="icon-como-lo-hacemos" src="img/logo-Optimizing.jpg"  alt="">
+              <h2>Optimización</h2>
+              <p id="parrafo1">Lorem ante ipsum primis in faucibus orci luctus eted ultrices posuere curae fers luctus eted.</p>
+            </div>
+            <div class="como-lo-hacemos-cards">
+              <img class="icon-como-lo-hacemos" src="img/logo-Result.jpg" alt="">
+              <h2>Resultados</h2>
+              <p id="parrafo1">Lorem ante ipsum primis in faucibus orci luctus eted ultrices posuere curae fers luctus eted.</p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </body>
 </html>
