--- a/public_html/infraestructura.html
+++ b/public_html/infraestructura.html
@@ -16,14 +16,14 @@ and open the template in the editor.
       <div class="contenedor_padre">
 
           <div class="titulo-servicio">
-              <p id="menu">Consultoría</p>
+              <p id="menu">Infraestructura</p>
             </div>
 
         <div class="slogan-1">
 
           <div class="slogan-1-colum-1">
             <div class="slogan-1-colum-1-sales-argument">
-              <h2>Soluciones robustas para tu negocio</h2>
+              <h2>¿Por qué la infraestructura de TI es importante?</h2>
             </div>
             <div class="slogan-1-colum-1-description-sales">
               <p id="menu1">Lorem ipsum viverra feugiat. Tesque libero ut justo, ultrices in ligula. Semper at tempufddfel. Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
@@ -31,7 +31,7 @@ and open the template in the editor.
           </div>
 
           <div class="slogan-1-colum-2">
-            <img src="img/logo-slogan-1.jpg" alt="">
+            <img src="img/logo-caracteristicas-sloga-1.jpg" alt="">
           </div>
 
         </div>
@@ -50,7 +50,7 @@ and open the template in the editor.
               <p id="menu1">Lorem ipsum viverra feugiat. Tesque libero ut justo, ultrices in ligula. Semper at tempufddfel. Lorem ipsum dolor sit amet consectetur adipisicing elit.Lorem ipsum viverra feugiat. Tesque libero ut justo, ultrices in ligula. Semper at tempufddfel. Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
             </div>
             <div class="slogan-2-colum-2-stadistical-data">
-              <a class="btn button-style" href="index.html">Learn More </a>
+              <a class="btn button-style" href="index.html">Leer mas</a>
             </div>
           </div>
         </div>
@@ -63,20 +63,14 @@ and open the template in the editor.
 
           <div class="carcateriticas-group-cards">
             <div class="caracteriticas-cards">
-              <img class="logo-caracteriticas" src="img/logo-fallas.jpg" alt="">
-              <h3>Identificación y reparación de fallas</h3>
+              <img class="logo-caracteriticas" src="img/logo-infraestrtuctura-caracteristicas-img-1.jpg" alt="">
+              <h3>Infraestructura tradicional</h3>
               <p id="parrafo1">Lorem ante ipsum primis in faucibus orci luctus eted ultrices posuere curae fers luctus eted. Lorem ante ipsum primis in faucibus orci luctus eted ultrices posuere curae fers luctus eted.</p>
               <a class="btn size-char" href="index.html">Leer mas</a>
             </div>
             <div class="caracteriticas-cards">
-              <img class="logo-caracteriticas" src="img/logo-planeacion-estrategica.jpg" alt="">
-              <h3>Planeación estratégica</h3>
-              <p id="parrafo1">Lorem ante ipsum primis in faucibus orci luctus eted ultrices posuere curae fers luctus eted. Lorem ante ipsum primis in faucibus orci luctus eted ultrices posuere curae fers luctus eted.</p>
-              <a class="btn size-char" href="index.html">Leer mas</a>
-            </div>
-            <div class="caracteriticas-cards">
-              <img class="logo-caracteriticas" src="img/logo-mineria.jpg" alt="">
-              <h3>Mineria de data</h3>
+              <img class="logo-caracteriticas" src="img/logo-infraestrtuctura-caracteristicas-img-2.jpg" alt="">
+              <h3>Infraestructura en la nube</h3>
               <p id="parrafo1">Lorem ante ipsum primis in faucibus orci luctus eted ultrices posuere curae fers luctus eted. Lorem ante ipsum primis in faucibus orci luctus eted ultrices posuere curae fers luctus eted.</p>
               <a class="btn size-char" href="index.html">Leer mas</a>
             </div>
