--- a/public_html/quienesSomos.html
+++ b/public_html/quienesSomos.html
@@ -1,38 +1,152 @@
 <!DOCTYPE html>
-<!--
-To change this license header, choose License Headers in Project Properties.
-To change this template file, choose Tools | Templates
-and open the template in the editor.
--->
-<html>
-    <head>
-        <title>¿Quiénes Somos?</title>
-        <meta charset="UTF-8">
-        <link rel="stylesheet" href="ccs/estilos.css">
+<html class="wide wow-animation" lang="es">
+  <head>
+    <title>¿Quiénes Somos?</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <link rel="icon" href="img/logo.png" type="image/x-icon">
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="ccs/aboutus/bootstrap.css">
+    <link rel="stylesheet" href="ccs/aboutus/fonts.css">
+    <link rel="stylesheet" href="ccs/aboutus/style.css">
+  </head>
+  <body>
+    <div class="preloader">
+      <div class="preloader-body">
+        <div class="cssload-container">
+          <div class="cssload-speeding-wheel"></div>
+        </div>
+        <p>Loading...</p>
+      </div>
+    </div>
+    <div class="page">
+      <header class="section page-header">
+      </header>
+      <section class="section section-intro context-dark">
+        <div class="intro-bg" style="background: url(img/bg05.jpg) no-repeat;background-size:cover;background-position: top center;"></div>
+        <div class="container">
+          <div class="row justify-content-center">
+            <div class="col-xl-8 text-center">
+              <h1 class="font-weight-bold wow fadeInLeft">¿Quiénes Somos?</h1>
+              <p class="intro-description wow fadeInRight">Siéntase libre de aprender un poco más sobre nuestro equipo y compañía en esta página. 
+			  <br>¡Estamos dispuestos a Colaborarle!</p>
+            </div>
+          </div>
+        </div>
+      </section>
+      <!-- About page about section-->
+      <section class="section section-md">
+        <div class="container">
+          <div class="row row-40 justify-content-center">
+            <div class="col-lg-6 col-12">
+              <div class="offset-top-45 offset-lg-right-45">
+                <div class="section-name wow fadeInRight" data-wow-delay=".2s">¿Quiénes Somos?</div>
+                <h3 class="wow fadeInLeft text-capitalize" data-wow-delay=".3s">Datos sobre<span class="text-primary"> Nosotros</span></h3>
+                <p class="font-weight-bold text-gray-dark wow fadeInUp" data-wow-delay=".4s">Agile nace de la idea de poder dedicarnos a lo que nos gusta, disfrutar de los proyectos desde el principio y poder sentirnos parte de ellos.</p>
+                <p class="wow fadeInUp" data-wow-delay=".4s">Cada proyecto web en el participamos nos marca y nos enseña siempre algo nuevo.</p>
+                <p class="wow fadeInUp" data-wow-delay=".4s">De esta forma estamos en continuo aprendizaje, nos gusta estar a la vanguardia. Y eso se ve reflejado en nuestros trabajos.</p>
+                <div class="offset-top-20">
+				  <!--Linear progress bar-->
+                  <article class="progress-linear">
+                    <div class="progress-header progress-header-simple">
+                      <p>Desarrollo de páginas y apps web</p><span class="progress-value">95</span>
+                    </div>
+                    <div class="progress-bar-linear-wrap">
+                      <div class="progress-bar-linear"></div>
+                    </div>
+                  </article>
+                  <!--Linear progress bar-->
+                  <article class="progress-linear">
+                    <div class="progress-header progress-header-simple">
+                      <p>Desarrollo a la Medida</p><span class="progress-value">90</span>
+                    </div>
+                    <div class="progress-bar-linear-wrap">
+                      <div class="progress-bar-linear"></div>
+                    </div>
+                  </article>
+				  <!--Linear progress bar-->
+                  <article class="progress-linear">
+                    <div class="progress-header progress-header-simple">
+                      <p>Infraestructura</p><span class="progress-value">85</span>
+                    </div>
+                    <div class="progress-bar-linear-wrap">
+                      <div class="progress-bar-linear"></div>
+                    </div>
+                  </article>
+				  <!--Linear progress bar-->
+                  <article class="progress-linear">
+                    <div class="progress-header progress-header-simple">
+                      <p>Consultoría</p><span class="progress-value">80</span>
+                    </div>
+                    <div class="progress-bar-linear-wrap">
+                      <div class="progress-bar-linear"></div>
+                    </div>
+                  </article>
+                </div>
+              </div>
+            </div>
+            <div class="col-lg-6 col-sm-10 col-12">
+              <div class="block-decorate-img wow fadeInLeft" data-wow-delay=".2s"><img src="img/logo.png" alt="" width="570" height="351"/>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <!-- Our team-->
+      <section class="section section-md">
+        <div class="container">
+          <div class="row row-50 justify-content-center">
+            <div class="col-md col-12 text-center">
+              <div class="section-name wow fadeInRight" data-wow-delay=".2s">¿Por qué Agile?</div>
+              <h3 class="wow fadeInLeft text-capitalize" data-wow-delay=".3s">Equipo<span class="text-primary"> Agile</span></h3>
+              <p class="block-675">
+				Cuando contactan con nosotros para encargarnos del desarrollo de un proyecto web, casi siempre se trata de empresas nuevas, 
+				de emprendedores, que nos cuentan su idea con las ganas y el anhelo de algo nuevo. 
+				Y nosotros queremos compartir ese anhelo de nuestros clientes.
+				Sabemos que es importante que nos confien su proyecto, y para nosotros es un honor formar parte de ese anhelo, 
+				porque queremos hacer de tu proyecto un gran proyecto.
 
-    </head>
-    <!--Set html structure to the form jheb-->
-    <body id="body-quienesSomos">
-    <h1>¿Quiénes Somos?</h1>
-	    <br>
-		<p>Agile nace de la idea de poder dedicarnos a lo que nos gusta, disfrutar de los proyectos desde el principio y poder sentirnos parte de ellos.
-		Cada proyecto web en el participamos nos marca y nos enseña siempre algo nuevo. 
-		De esta forma estamos en continuo aprendizaje, nos gusta estar a la vanguardia. Y eso se ve reflejado en nuestros trabajos.</p>
+				El anhelo también es propio, porque nosotros también somos emprendedores. 
+				Es un sueño dedicarnos a lo que nos gusta, y poder elegir los proyectos en los que participamos es un privilegio. 
+				Por eso no disponemos de planes de precios para nuestros desarrollos, ni paquetes básicos, premium o profesionales. 
+				Tratamos cada proyecto de forma independiente, y nos adaptamos a tu presupuesto, sin letras pequeñas ni costes añadidos.
 
-
-	<h1>¿Por qué Agile?</h1>
-	    <br>
-		<p>Cuando contactan con nosotros para encargarnos del desarrollo de un proyecto web, casi siempre se trata de empresas nuevas, 
-		de emprendedores, que nos cuentan su idea con las ganas y el anhelo de algo nuevo. 
-		Y nosotros queremos compartir ese anhelo de nuestros clientes.
-		Sabemos que es importante que nos confien su proyecto, y para nosotros es un honor formar parte de ese anhelo, 
-		porque queremos hacer de tu proyecto un gran proyecto.
-
-		El anhelo también es propio, porque nosotros también somos emprendedores. 
-		Es un sueño dedicarnos a lo que nos gusta, y poder elegir los proyectos en los que participamos es un privilegio. 
-		Por eso no disponemos de planes de precios para nuestros desarrollos, ni paquetes básicos, premium o profesionales. 
-		Tratamos cada proyecto de forma independiente, y nos adaptamos a tu presupuesto, sin letras pequeñas ni costes añadidos.
-
-		Tú pones la idea y nosotros la hacemos realidad.</p>
-    </body>
+				Tú pones la idea y nosotros la hacemos realidad.</p>
+            </div>
+          </div>
+          
+        </div>
+      </section>
+      <!--Cta section-->
+      <section class="section section-md" style="background:url(img/bg05.jpg) no-repeat; background-size: cover;">
+        <div class="container">
+          <div class="row justify-content-center">
+            <div class="col-md-10 col-12 text-center"><span class="text-white d-block cta-big-text font-weight-medium">¿Aún tienes dudas?</span>
+				<a class="button-circle button-default-outline button button-lg button-width-210" href="contactanos.html">Contáctanos</a>
+            </div>
+          </div>
+        </div>
+      </section>
+      <!--Footer-->
+      <footer class="section footer-classic section-sm">
+        <div class="container wow fadeInUp" data-wow-delay=".4s">
+          <div class="footer-classic-aside">
+            <p class="rights"><span>&copy;&nbsp;</span><span class="copyright-year"></span>. Todos los derechos reservados <a href="https://github.com/githubJHEB/PlusUpbSprint">Agile</a></p>
+            <ul class="social-links">
+              <li><a class="fa fa-linkedin" href="#"></a></li>
+              <li><a class="fa fa fa-twitter" href="#"></a></li>
+              <li><a class="fa fa-facebook" href="#"></a></li>
+              <li><a class="fa fa-instagram" href="#"></a></li>
+            </ul>
+          </div>
+        </div>
+      </footer>
+    </div>
+    <div class="snackbars" id="form-output-global"></div>
+    <script src="js/core.min.js"></script>
+    <script src="js/script.js"></script>
+  </body>
 </html>
